<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Title TextView -->
    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        />

    <!-- Main LinearLayout -->
    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        >

        <!-- Profile Picture -->
        <ImageView
            android:id="@+id/profilepicture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_background"
            />

        <!-- Text below Profile Picture -->
        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Your Profile Photo"
            android:textColor="@color/green"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            />

        <!-- EditTexts -->
        <EditText
            android:id="@+id/firstandlastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_and_last_name"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            />

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_edit_user"
            android:inputType="text"
            android:minHeight="48dp"
            android:layout_marginTop="8dp"
            />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_string"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:layout_marginTop="8dp"
            />

        <EditText
            android:id="@+id/repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/repeat_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:layout_marginTop="8dp"
            />

    </LinearLayout>

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/colorOnSurface_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginBottom="16dp"
        />

    <!-- Bottom LinearLayout -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        app:layout_constraintVertical_bias="0.841"
        >

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>